feat: bring in TSPLIB95 and CVRPLIB benchmarks (#34)